--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GHOST - Solana Whale Tracker</title>
+    <title>GHO5T - Solana Whale Tracker</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         <!-- Header -->
         <header class="header">
             <div class="logo-container">
-                <h1>GHOST</h1>
+                <h1>GHO5T</h1>
                 <span class="subtitle">SOLANA WHALE TRACKER</span>
             </div>
             <nav class="nav">
