--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="nav">
                 <a href="#home" class="nav-link active">HOME</a>
                 <a href="#wallets" class="nav-link">WALLETS</a>
-                <a href="https://x.com/GHO5T_Monitor" class="nav-link">Twitter</a>
+                <a href="https://twitter.com/GHO5T_Monitor" class="nav-link" target="_blank">Twitter</a>
             </nav>
         </header>
 
