--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GHO5T - Solana Whale Tracker - CA: </title>
+    <title>GHO5T - Solana Whale Tracker</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
         <header class="header">
             <div class="logo-container">
                 <h1>GHO5T</h1>
-                <span class="subtitle">SOLANA WHALE TRACKER</span>
+                <span class="subtitle">SOLANA WHALE TRACKER - CA: </span>
             </div>
             <nav class="nav">
                 <a href="#home" class="nav-link active">HOME</a>
