--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <div class="logo-container">
                 <h1>GHO5T</h1>
-                <span class="subtitle">SOLANA WHALE TRACKER - CA: </span>
+                <span class="subtitle">SOLANA WHALE TRACKER - CA: EUYaHuHgcBPG8WRcP4iMSUHyRdgEgCkzoZw1Rs2Tpump</span>
             </div>
             <nav class="nav">
                 <a href="#home" class="nav-link active">HOME</a>
